# barbershop

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start_server.sh
app/: database.py  logger.py
app/config/: settings.py
app/dependecies/: __init__.py  user.py
app/models/: __init__.py  propositions.py  records.py  user.py
app/routers/: __init__.py  auth.py  propositions.py  records.py
app/schemas/: __init__.py
app/scripts/: create_superuser
app/serializers/: __init__.py  auth.py  propositions.py  records.py
app/services/: __init__.py  auth.py  base.py  proposition.py  records.py  user.py
scripts/: create_superuser.py
tests/: conftest.py  test_auth.py  test_propositions.py  test_records.py
tests/utils/: user.py
